--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 ---
 layout: default
-title: Jonathan Cremin &ndash; Web Hacker/Engineer/Developer
+title: Hector Zarate. iOS Cowboy. 
 ---
 <header>
-			<h1><a href="/">Jonathan Cremin</a> <small>Want to get in touch? Email me at <a href="mailto:jonathan@crem.in">jonathan@crem.in</a></small></h1>
+        <h1><a href="/">Hector Zarate</a> <small>Follow me at: <a href="https://twitter.com/hecktorzr">@hecktorzr</a></small></h1>
 			<!-- About -->
 			<div id="about">
-				Jonathan is full-stack web hacker/engineer/developer living in Dublin, Ireland and working at <a href="http://www.hostelworld.com">Hostelworld</a>. He works on open source, web server stacks, XHTML/CSS, JavaScript and enjoys discovering new technologies. Jonathan's a sucker for good UX and design. He's also the founder of <a href="http://localhostr.com">Localhostr</a> and <a href="https://minthost.com">Minthost</a>.
+				I'm a Software Engineer from Mexico City currently living in Warsaw, Poland. Objective-C is my favorite language and iOS my favorite platform. <br />
+                I  love pop-corn, gummi bears and commiting code to repositories.
 			</div>
 		</header>
 
