--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Hector Zarate. iOS Cowboy.
 			<!-- About -->
 			<div id="about">
 				I'm a Software Engineer from Mexico City currently living in Warsaw, Poland. Objective-C is my favorite language and iOS my favorite platform. <br />
-                I  love pop-corn, gummi bears and commiting code to repositories.
+                I  love pop-corn, gummy bears and committing code to repositories.
 			</div>
 		</header>
 
