Update Twitter link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Hector Zarate. iOS Cowboy. 
 ---
 <header>
-        <h1><a href="/">Hector Zarate</a> <small><a href="http://twitter.com/hecktorzr">@hecktorzr</a> | <a href="https://pl.linkedin.com/in/hecktorzr/">LinkedIn</a></small></h1>
+        <h1><a href="/">Hector Zarate</a> <small><a href="http://twitter.com/iOSCowboy">@iOSCowboy</a> | <a href="https://pl.linkedin.com/in/hecktorzr/">LinkedIn</a></small></h1> 
 			<!-- About -->
 			<div id="about">
 				I'm a Software Engineer from Mexico City currently living in Warsaw, Poland. Objective-C is my favorite language and iOS my favorite platform. <br />
