--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ title: Hector Zarate. iOS Cowboy.
         <h1><a href="/">Hector Zarate</a> <small><a href="http://twitter.com/iOSCowboy">@iOSCowboy</a> | <a href="https://pl.linkedin.com/in/hecktorzr/">LinkedIn</a></small></h1> 
 			<!-- About -->
 			<div id="about">
-				I'm a Software Engineer from Mexico City currently living in Warsaw, Poland. Objective-C is my favorite language and iOS my favorite platform. <br />
-                I  love pop-corn, gummy bears and committing code to repositories.
+		         I bring a debuger and a text-editor to my gunfights. 
+                 I don't know how to ride a horse but I do wear blue jeans. Pretty much a cowboy from the smart-phone era.
 			</div>
 		</header>
 
