--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@ title: Hector Zarate. iOS Cowboy.
 <h2>Previous Posts</h2>
 <ul class="unstyled">
 {% for post in site.posts %}
+{% if forloop.index > paginator.per_page %}
 <li><a href="{{ post.url }}">{{ post.title }}</a> <small>{{ post.date | date_to_string }}</small> </li>
+{% endif %}
 {% endfor %}
 </ul>
