Changed title of website

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Hector Zarate. iOS Cowboy. 
+title: iOS Cowboy by Hector Zarate 
 ---
 <header>
-        <h1><a href="/">Hector Zarate</a> <small><a href="http://twitter.com/iOSCowboy">@iOSCowboy</a> | <a href="https://pl.linkedin.com/in/hecktorzr/">LinkedIn</a></small></h1> 
+        <h1><a href="/">iOS Cowboy</a> <small><a href="http://twitter.com/iOSCowboy">@iOSCowboy</a> | <a href="https://pl.linkedin.com/in/hecktorzr/">LinkedIn</a></small></h1> 
 			<!-- About -->
 			<div id="about">
 		         I bring a debuger and a text-editor to my gunfights.<br /> 
