--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: iOS Cowboy by Hector Zarate
         <h1><a href="/">iOS Cowboy</a> <small><a href="http://twitter.com/iOSCowboy">@iOSCowboy</a> | <a href="https://pl.linkedin.com/in/hecktorzr/">LinkedIn</a></small></h1> 
 			<!-- About -->
 			<div id="about">
-		         I bring a debuger and a text-editor to my gunfights.<br /> 
+		         I bring a debugger and a text-editor to my gunfights.<br /> 
                  I don't know how to ride a horse but I do wear blue jeans. Pretty much a cowboy from the smart-phone era.
 			</div>
 		</header>
